--- a/index.html
+++ b/index.html
@@ -46,8 +46,118 @@
             </div>
           </div>
           <div class="user_menu">
-            <div class="user">
-  
+            <div class="user vip">
+              <div class="hover"></div>
+              <div class="img"></div>
+              <div class="user_data">
+                <div class="user_name">
+                  蘑菇碳
+                </div>
+                <div class="vip">
+                  大会员
+                </div>
+                <div class="level">
+                  <div>
+                    <span>等级4</span>
+                    <span>9310/10800</span>
+                  </div>
+                  <div>
+                    <div class="all">
+                      <div class="now"></div>
+                    </div>
+                  </div>
+                </div>
+                <div class="resource">
+                  <div>
+                    <svg class="icon" aria-hidden="true">
+                      <use xlink:href="#icon-icon_dingdao_yingbi"></use>
+                    </svg>
+                    <span>614</span>
+                  </div>
+                  <div>
+                    <svg class="icon" aria-hidden="true">
+                      <use xlink:href="#icon-icon_dingdao_Bbi"></use>
+                    </svg>
+                    <span>0</span>
+                  </div>
+                  <div class="bind">
+                    <svg class="icon" aria-hidden="true">
+                      <use xlink:href="#icon-youxiang"></use>
+                    </svg>
+                    <svg class="icon" aria-hidden="true">
+                      <use xlink:href="#icon-zhongduanguanli"></use>
+                    </svg>
+                  </div>
+                </div>
+                <div class="state">
+                  <div>
+                    <div>关注</div>
+                    <span>37</span>
+                  </div>
+                  <div>
+                    <div>粉丝</div>
+                    <span>9</span>
+                  </div>
+                  <div>
+                    <div>动态</div>
+                    <span>67</span>
+                  </div>
+                </div>
+                <div class="menu">
+                  <div>
+                    <svg class="icon" aria-hidden="true">
+                      <use xlink:href="#icon-user_active"></use>
+                    </svg>
+                    <span>个人中心</span>
+                  </div>
+                  <div>
+                    <svg class="icon" aria-hidden="true">
+                      <use xlink:href="#icon-tougaoguanli"></use>
+                    </svg>
+                    <span>投稿管理</span>
+                  </div>
+                  <div>
+                    <svg class="icon" aria-hidden="true">
+                      <use xlink:href="#icon-qianbao"></use>
+                    </svg>
+                    <span>B站钱包</span>
+                  </div>
+                  <div>
+                    <svg class="icon" aria-hidden="true">
+                      <use xlink:href="#icon-icon-"></use>
+                    </svg>
+                    <span>订单中心</span>
+                  </div>
+                  <div>
+                    <svg class="icon" aria-hidden="true">
+                      <use xlink:href="#icon-pingmu"></use>
+                    </svg>
+                    <span>直播中心</span>
+                  </div>
+                  <div>
+                    <svg class="icon" aria-hidden="true">
+                      <use xlink:href="#icon-shu"></use>
+                    </svg>
+                    <span>我的课程</span>
+                  </div>
+                </div>
+                <div class="language">
+                  <svg class="icon" aria-hidden="true">
+                    <use xlink:href="#icon-yuyan"></use>
+                  </svg>
+                  <span>语言：简体中文</span>
+                  <svg class="icon" aria-hidden="true">
+                    <use xlink:href="#icon-xiala-copy
+                    "></use>
+                  </svg>
+                </div>
+                <div class="quit">
+                  <svg class="icon" aria-hidden="true">
+                    <use xlink:href="#icon-tuichu"></use>
+                  </svg>
+                  <span>退出</span>
+                </div>
+              </div>
             </div>
             <ul>
               <li>大会员</li>
@@ -100,34 +210,127 @@
           <li>
             <div>动画</div>
             <div>999+</div>
+            <div class="option above">
+              <div>
+                <div>MAD·AMV</div>
+                <div>MMD·3D</div>
+                <div>短片·手书·配音</div>
+                <div>手办·模玩</div>
+              </div>
+              <div>
+                <div>特摄</div>
+                <div>综合</div>
+              </div>
+            </div>
           </li>
           <li>
             <div>音乐</div>
             <div>999+</div>
+            <div class="option above">
+              <div>
+                <div>原创音乐</div>
+                <div>翻唱</div>
+                <div>VOCALOID·UTAU</div>
+                <div>电音</div>
+              </div>
+              <div>
+                <div>演奏</div>
+                <div>MV</div>
+                <div>音乐现场</div>
+                <div>音乐综合</div>
+              </div>
+              <div>
+                <div>音频</div>
+                <div>说唱</div>
+              </div>
+            </div>
           </li>
           <li>
             <div>舞蹈</div>
             <div>999+</div>
+            <div class="option above">
+              <div>
+                <div>宅舞</div>
+                <div>街舞</div>
+                <div>明星舞蹈</div>
+                <div>中国舞</div>
+              </div>
+              <div>
+                <div>舞蹈综合</div>
+                <div>舞蹈教程</div>
+              </div>
+            </div>
           </li>
           <li>
             <div>知识</div>
             <div>999+</div>
+            <div class="option above">
+              <div>
+                <div>科学科普</div>
+                <div>社科人文</div>
+                <div>财经</div>
+                <div>校园学习</div>
+              </div>
+              <div>
+                <div>职业职场</div>
+                <div>野生技术协会</div>
+              </div>
+            </div>
           </li>
           <li>
             <div>生活</div>
             <div>999+</div>
+            <div class="option above">
+              <div>
+                <div>高校</div>
+                <div>日常</div>
+                <div>动物圈</div>
+                <div>手工</div>
+              </div>
+              <div>
+                <div>绘画</div>
+                <div>运动</div>
+                <div>汽车</div>
+                <div>其它</div>
+              </div>
+            </div>
           </li>
           <li>
             <div>时尚</div>
             <div>999+</div>
+            <div class="option above">
+              <div>
+                <div>美妆</div>
+                <div>服饰</div>
+                <div>健身</div>
+                <div>T台</div>
+              </div>
+              <div>
+                <div>风尚标</div>
+              </div>
+            </div>
+          </li>
           </li>
           <li>
             <div>娱乐</div>
             <div>999+</div>
+            <div class="option r2 above">
+              <div>
+                <div>综艺</div>
+                <div>明星</div>
+              </div>
+            </div>
           </li>
           <li>
             <div>放映厅</div>
             <div>999+</div>
+            <div class="option r3 above">
+              <div>
+                <div>纪录片</div>
+                <div>电影</div>
+                <div>电视剧</div>
+              </div>
+            </div>
           </li>
           <li>
             <div>动物圈</div>
@@ -140,30 +343,104 @@
           <li>
             <div>番剧</div>
             <div>999+</div>
+            <div class="option below">
+              <div>
+                <div>连载动画</div>
+                <div>完结动画</div>
+                <div>资讯</div>
+                <div>官方延伸</div>
+              </div>
+              <div>
+                <div>新番时间表</div>
+                <div>番剧索引</div>
+              </div>
+            </div>
           </li>
           <li>
             <div>国创</div>
             <div>999+</div>
+            <div class="option below">
+              <div>
+                <div>国产动画</div>
+                <div>国产原创相关</div>
+                <div>布袋戏</div>
+                <div>动态漫·广播剧</div>
+              </div>
+              <div>
+                <div>资讯</div>
+                <div>新番时间表</div>
+                <div>国产动画索引</div>
+              </div>
+            </div>
           </li>
           <li>
             <div>游戏</div>
             <div>999+</div>
+            <div class="option below">
+              <div>
+                <div>单机游戏</div>
+                <div>电子竞技</div>
+                <div>手机游戏</div>
+                <div>网络游戏</div>
+              </div>
+              <div>
+                <div>桌游棋牌</div>
+                <div>GMV</div>
+                <div>音游</div>
+                <div>Mugen</div>
+              </div>
+              <div>
+                <div>游戏赛事</div>
+              </div>
+            </div>
           </li>
           <li>
             <div>数码</div>
             <div>999+</div>
+            <div class="option below">
+              <div>
+                <div>手机平板</div>
+                <div>电脑装机</div>
+                <div>摄影摄像</div>
+                <div>影音智能</div>
+              </div>
+            </div>
           </li>
           <li>
             <div>鬼畜</div>
             <div>999+</div>
+            <div class="option below">
+              <div>
+                <div>鬼畜调教</div>
+                <div>音MAD</div>
+                <div>人力VOCALOID</div>
+                <div>教程演示</div>
+              </div>
+            </div>
           </li>
           <li>
             <div>资讯</div>
             <div>999+</div>
+            <div class="option below">
+              <div>
+                <div>热点</div>
+                <div>环球</div>
+                <div>社会</div>
+                <div>综合</div>
+              </div>
+            </div>
           </li>
           <li>
             <div>影视</div>
             <div>999+</div>
+            <div class="option below">
+              <div>
+                <div>影视杂谈</div>
+                <div>视频剪辑</div>
+                <div>短片</div>
+                <div>预告·资讯</div>
+              </div>
+            </div>
           </li>
           <li>
             <div>搞笑</div>
@@ -219,15 +496,126 @@
       </div>
       <div class="recommend">
         <div class="advertisement">
-
+          <input type="radio" name="loop" id="loop_1">
+          <input type="radio" name="loop" id="loop_2">
+          <input type="radio" name="loop" id="loop_3">
+          <input type="radio" name="loop" id="loop_4" checked>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <label for="loop_1">
+            <span>
+              <svg class="icon" aria-hidden="true">
+                <use xlink:href="#icon-chidouren"></use>
+              </svg>
+            </span>
+          </label>
+          <label for="loop_2">
+            <span>
+              <svg class="icon" aria-hidden="true">
+                <use xlink:href="#icon-chidouren"></use>
+              </svg>
+            </span>
+          </label>
+          <label for="loop_3">
+            <span>
+              <svg class="icon" aria-hidden="true">
+                <use xlink:href="#icon-chidouren"></use>
+              </svg>
+            </span>
+          </label>
+          <label for="loop_4">
+            <span>
+              <svg class="icon" aria-hidden="true">
+                <use xlink:href="#icon-chidouren"></use>
+              </svg>
+            </span>
+          </label>
         </div>
-        <div class="vedio">
-          <div></div>
-          <div></div>
-          <div></div>
-          <div></div>
-          <div></div>
-          <div></div>
+        <div class="vedios">
+          <div class="turn left">
+            <svg class="icon" aria-hidden="true">
+              <use xlink:href="#icon-xiala-copy"></use>
+            </svg>
+          </div>
+          <div class="turn right">
+            <svg class="icon" aria-hidden="true">
+              <use xlink:href="#icon-xiala-copy"></use>
+            </svg>            
+          </div>
+          <div class="vedio">
+            <div class="mask">
+              <div class="title">看这边看这边！这边是视频的标题</div>
+              <div class="up">
+                <svg class="icon" aria-hidden="true">
+                  <use xlink:href="#icon-UPzhu"></use>
+                </svg>
+                <span>up主</span>
+              </div>
+              <div class="view">114万播放</div>
+            </div>
+          </div>
+          <div class="vedio">
+            <div class="mask">
+              <div class="title">看这边看这边！这边是视频的标题</div>
+              <div class="up">
+                <svg class="icon" aria-hidden="true">
+                  <use xlink:href="#icon-UPzhu"></use>
+                </svg>
+                <span>up主</span>
+              </div>
+              <div class="view">114万播放</div>
+            </div>
+          </div>
+          <div class="vedio">
+            <div class="mask">
+              <div class="title">看这边看这边！这边是视频的标题</div>
+              <div class="up">
+                <svg class="icon" aria-hidden="true">
+                  <use xlink:href="#icon-UPzhu"></use>
+                </svg>
+                <span>up主</span>
+              </div>
+              <div class="view">114万播放</div>
+            </div>
+          </div>
+          <div class="vedio">
+            <div class="mask">
+              <div class="title">看这边看这边！这边是视频的标题</div>
+              <div class="up">
+                <svg class="icon" aria-hidden="true">
+                  <use xlink:href="#icon-UPzhu"></use>
+                </svg>
+                <span>up主</span>
+              </div>
+              <div class="view">114万播放</div>
+            </div>
+          </div>
+          <div class="vedio">
+            <div class="mask">
+              <div class="title">看这边看这边！这边是视频的标题</div>
+              <div class="up">
+                <svg class="icon" aria-hidden="true">
+                  <use xlink:href="#icon-UPzhu"></use>
+                </svg>
+                <span>up主</span>
+              </div>
+              <div class="view">114万播放</div>
+            </div>
+          </div>
+          <div class="vedio">
+            <div class="mask">
+              <div class="title">看这边看这边！这边是视频的标题</div>
+              <div class="up">
+                <svg class="icon" aria-hidden="true">
+                  <use xlink:href="#icon-UPzhu"></use>
+                </svg>
+                <span>up主</span>
+              </div>
+              <div class="view">114万播放</div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
