--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="author" content="">
     <script src="./iconfonts/iconfont.js"></script>
     <link rel="stylesheet" href="css/bilibili.css">
+    <script src="./js/bilibili.js"></script>
   </head>
   <body>
     <div class="header">
@@ -208,8 +209,8 @@
         </ul>
         <ul class="menu_2">
           <li>
-            <div>动画</div>
             <div>999+</div>
+            <div>动画</div>
             <div class="option above">
               <div>
                 <div>MAD·AMV</div>
@@ -224,8 +225,8 @@
             </div>
           </li>
           <li>
-            <div>音乐</div>
             <div>999+</div>
+            <div>音乐</div>
             <div class="option above">
               <div>
                 <div>原创音乐</div>
@@ -246,8 +247,8 @@
             </div>
           </li>
           <li>
-            <div>舞蹈</div>
             <div>999+</div>
+            <div>舞蹈</div>
             <div class="option above">
               <div>
                 <div>宅舞</div>
@@ -262,8 +263,8 @@
             </div>
           </li>
           <li>
-            <div>知识</div>
             <div>999+</div>
+            <div>知识</div>
             <div class="option above">
               <div>
                 <div>科学科普</div>
@@ -278,8 +279,8 @@
             </div>
           </li>
           <li>
-            <div>生活</div>
             <div>999+</div>
+            <div>生活</div>
             <div class="option above">
               <div>
                 <div>高校</div>
@@ -296,8 +297,8 @@
             </div>
           </li>
           <li>
-            <div>时尚</div>
             <div>999+</div>
+            <div>时尚</div>
             <div class="option above">
               <div>
                 <div>美妆</div>
@@ -312,8 +313,8 @@
           </li>
           </li>
           <li>
-            <div>娱乐</div>
             <div>999+</div>
+            <div>娱乐</div>
             <div class="option r2 above">
               <div>
                 <div>综艺</div>
@@ -322,8 +323,8 @@
             </div>
           </li>
           <li>
-            <div>放映厅</div>
             <div>999+</div>
+            <div>放映厅</div>
             <div class="option r3 above">
               <div>
                 <div>纪录片</div>
@@ -333,16 +334,16 @@
             </div>
           </li>
           <li>
+            <div>999+</div>
             <div>动物圈</div>
-            <div>999+</div>
           </li>
           <li>
+            <div>999+</div>
             <div>单机游戏</div>
-            <div>999+</div>
           </li>
           <li>
-            <div>番剧</div>
             <div>999+</div>
+            <div>番剧</div>
             <div class="option below">
               <div>
                 <div>连载动画</div>
@@ -357,8 +358,8 @@
             </div>
           </li>
           <li>
-            <div>国创</div>
             <div>999+</div>
+            <div>国创</div>
             <div class="option below">
               <div>
                 <div>国产动画</div>
@@ -374,8 +375,8 @@
             </div>
           </li>
           <li>
-            <div>游戏</div>
             <div>999+</div>
+            <div>游戏</div>
             <div class="option below">
               <div>
                 <div>单机游戏</div>
@@ -395,8 +396,8 @@
             </div>
           </li>
           <li>
-            <div>数码</div>
             <div>999+</div>
+            <div>数码</div>
             <div class="option below">
               <div>
                 <div>手机平板</div>
@@ -407,8 +408,8 @@
             </div>
           </li>
           <li>
-            <div>鬼畜</div>
             <div>999+</div>
+            <div>鬼畜</div>
             <div class="option below">
               <div>
                 <div>鬼畜调教</div>
@@ -419,8 +420,8 @@
             </div>
           </li>
           <li>
-            <div>资讯</div>
             <div>999+</div>
+            <div>资讯</div>
             <div class="option below">
               <div>
                 <div>热点</div>
@@ -431,8 +432,8 @@
             </div>
           </li>
           <li>
-            <div>影视</div>
             <div>999+</div>
+            <div>影视</div>
             <div class="option below">
               <div>
                 <div>影视杂谈</div>
@@ -443,16 +444,16 @@
             </div>
           </li>
           <li>
+            <div>999+</div>
             <div>搞笑</div>
-            <div>999+</div>
           </li>
           <li>
+            <div>999+</div>
             <div>美食</div>
-            <div>999+</div>
           </li>
           <li>
-            <div>VLOG</div>
             <div>999+</div>
+            <div>VLOG</div>
           </li>
         </ul>
         <ul class="menu_3">
@@ -1033,14 +1034,22 @@
           </svg>
           <span>番剧</span>
           <ul class="update_time">
-            <li class="now">最新</li>
-            <li>周一</li>
-            <li>周二</li>
-            <li>周三</li>
-            <li>周四</li>
-            <li>周五</li>
-            <li>周六</li>
-            <li>周日</li>
+            <input type="radio" name="cartoon_1" id="cartoon_1_1" checked>
+            <input type="radio" name="cartoon_1" id="cartoon_1_2">
+            <input type="radio" name="cartoon_1" id="cartoon_1_3">
+            <input type="radio" name="cartoon_1" id="cartoon_1_4">
+            <input type="radio" name="cartoon_1" id="cartoon_1_5">
+            <input type="radio" name="cartoon_1" id="cartoon_1_6">
+            <input type="radio" name="cartoon_1" id="cartoon_1_7">
+            <input type="radio" name="cartoon_1" id="cartoon_1_8">
+            <label for="cartoon_1_1"><li>最新</li></label>
+            <label for="cartoon_1_2"><li>周一</li></label>
+            <label for="cartoon_1_3"><li>周二</li></label>
+            <label for="cartoon_1_4"><li>周三</li></label>
+            <label for="cartoon_1_5"><li>周四</li></label>
+            <label for="cartoon_1_6"><li>周五</li></label>
+            <label for="cartoon_1_7"><li>周六</li></label>
+            <label for="cartoon_1_8"><li>周日</li></label>
           </ul>
         </div>
         <div class="main">
@@ -1360,22 +1369,58 @@
       <div class="partition animation rank">
         <div class="title">
           <svg class="icon" aria-hidden="true">
-            <use xlink:href="#icon-guochuang"></use>
+            <use xlink:href="#icon-shipin"></use>
           </svg>
-          <span>国创</span>
+          <span>番剧</span>
           <ul class="update_time">
-            <li class="now">最新</li>
-            <li>周一</li>
-            <li>周二</li>
-            <li>周三</li>
-            <li>周四</li>
-            <li>周五</li>
-            <li>周六</li>
-            <li>周日</li>
+            <input type="radio" name="cartoon_2" id="cartoon_2_1" checked>
+            <input type="radio" name="cartoon_2" id="cartoon_2_2">
+            <input type="radio" name="cartoon_2" id="cartoon_2_3">
+            <input type="radio" name="cartoon_2" id="cartoon_2_4">
+            <input type="radio" name="cartoon_2" id="cartoon_2_5">
+            <input type="radio" name="cartoon_2" id="cartoon_2_6">
+            <input type="radio" name="cartoon_2" id="cartoon_2_7">
+            <input type="radio" name="cartoon_2" id="cartoon_2_8">
+            <label for="cartoon_2_1"><li>最新</li></label>
+            <label for="cartoon_2_2"><li>周一</li></label>
+            <label for="cartoon_2_3"><li>周二</li></label>
+            <label for="cartoon_2_4"><li>周三</li></label>
+            <label for="cartoon_2_5"><li>周四</li></label>
+            <label for="cartoon_2_6"><li>周五</li></label>
+            <label for="cartoon_2_7"><li>周六</li></label>
+            <label for="cartoon_2_8"><li>周日</li></label>
           </ul>
         </div>
         <div class="main">
           <div class="vedio">
+            <div class="box">
+              <div class="image"></div>
+              <div class="describe">
+                <span class="name">这里是这部番剧的标题</span>
+                <span class="update">更新</span>
+              </div>
+            </div> 
+            <div class="box">
+              <div class="image"></div>
+              <div class="describe">
+                <span class="name">这里是这部番剧的标题</span>
+                <span class="update">更新</span>
+              </div>
+            </div> 
+            <div class="box">
+              <div class="image"></div>
+              <div class="describe">
+                <span class="name">这里是这部番剧的标题</span>
+                <span class="update">更新</span>
+              </div>
+            </div> 
+            <div class="box">
+              <div class="image"></div>
+              <div class="describe">
+                <span class="name">这里是这部番剧的标题</span>
+                <span class="update">更新</span>
+              </div>
+            </div> 
             <div class="box">
               <div class="image"></div>
               <div class="describe">
@@ -4374,6 +4419,48 @@
           </div>
           <div class="advertisement">
 
+          </div>
+        </div>
+      </div>
+      <div class="slider">
+        <div class="head">
+          <svg class="icon" aria-hidden="true">
+            <use xlink:href="#icon-xiala-copy"></use>
+          </svg>
+        </div>
+        <div class="body">
+          <ul class="menu">
+            <li>直播</li>
+            <li>动画</li>
+            <li>番剧</li>
+            <li>国创</li>
+            <li>漫画</li>
+            <li>音乐</li>
+            <li>舞蹈</li>
+            <li>游戏</li>
+            <li>知识</li>
+            <li>课堂</li>
+            <li>数码</li>
+            <li>生活</li>
+            <li>鬼畜</li>
+            <li>时尚</li>
+            <li>资讯</li>
+            <li>娱乐</li>
+            <li>专栏</li>
+            <li>电影</li>
+            <li>TV剧</li>
+            <li>影视</li>
+            <li>纪录片</li>
+          </ul>
+          <div class="setting">
+            <svg class="icon" aria-hidden="true">
+              <use xlink:href="#icon-jiaohuan"></use>
+            </svg>
+          </div>
+          <div class="to_top">
+            <svg class="icon" aria-hidden="true">
+              <use xlink:href="#icon-xiala-copy"></use>
+            </svg>
           </div>
         </div>
       </div>
